kubernetes/cluster/active/apps/it-tools/overlays/prod/resources/request-authentication.yaml
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: it-tools-kanidm
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
    - issuer: https://auth.${FQDN_01}/oauth2/openid/it-tools
      forwardOriginalToken: true
